Deliver bounds information to CreateTooltipWidget

When 'CreateTooltipWidget' creates 'Widget' for tooltip and
initializes it, it needs its bounds at InitParams. If it
doesn't have the bounds information, some platform widgets
get crashed and DesktopWindowTreeHostX11 keeps
|sanitized_params| to avoid this case.

This patch delivers the bounds for the tooltip widget and
adds DCHECK to find what causes the empty bounds.

Bug: 849585
Change-Id: I3de067a917e4343bab642c3a1b13434b6cfaeee0
Reviewed-on: https://chromium-review.googlesource.com/1086820
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Julie Jeongeun Kim <jkim@igalia.com>
Cr-Commit-Position: refs/heads/master@{#582426}
Former-commit-id: 490c27babbe440762253c71c8ddc2438d3814d0e